# my-prac-dir

./: .env.example  .gitignore  Dockerfile.dev  README.md  climate_prediction.py  config.py  docker-compose.yml  download.py  gitignore_default.md  gitignore_etc.md  gitignore_fe.md  list.md  list.txt  qna.html  readme.md  requirements.txt  test.py  연구노트.md
CNN-HandwrittenDigitRec/: .gitignore  README.md  mnist_model.keras  train.py  visualizer.py
WeatherForecastLSTM/: .gitignore  README.md
WeatherForecastLSTM/be/: settings.gradle.kts
WeatherForecastLSTM/document/: 연구노트.html
WeatherForecastLSTM/fe/: README.md  package-lock.json
YOLO-ObjectDetector/: Dockerfile  README.md  docker-compose.yml
YOLO-ObjectDetector/src/: main.py  test.py
backend/: .gitignore  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/ml/: config.json  main.py
be/: build.gradle.kts
fast/: README.md  file_list.txt
fast/frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
fastapi-factory-ml/: .gitignore  README.md
fastapi-factory-ml/backend/: README.md  requirements.in
frontend/: package.json  vite.config.ts
frontend/src/: App.css  App.tsx  (+2 more)
legacy/: climate_prediction.py
lstm-java/: README.md
mnist/: predict.py  requirements.txt
old/: dockerfile.old  old_climate_prediction.py
opcua-ac-simulator/: readme.md
speech-to-text-models/: .gitignore  README.md  Root.md  requirements.txt
visualizations/: training_report.html
weather/: requirements.txt
whisper/: Dockerfile.dev
yolo/: pyproject.toml
zsh/: p10k.zsh  zshrc
(+108 files in other folders)
