[tool.poetry]
name = "yolo"
version = "0.1.0"
description = ""
authors = ["clorose <gohan9511@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "^4.10.0.84"
seaborn = "^0.13.2"
pandas = "^2.2.3"
tensorboard = "^2.18.0"
tqdm = "^4.67.1"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
ultralytics = "^8.3.38"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
